# psmpi

./: Makefile.in  README.adoc  configure.ac  mpicc.mpicompressor.lib.sh  mpicompressor.c
doc/antora/modules/ROOT/pages/: runtime-parameters.adoc
mpich2/: configure.ac
mpich2/maint/: gen_coll.py
mpich2/maint/local_python/: binding_f08.py  mpi_api.py
mpich2/modules/yaksa/src/backend/cuda/: subconfigure.m4
mpich2/src/binding/: mpi_standard_api.txt
mpich2/src/binding/c/: collops_api.txt  compr_api.txt  info_api.txt
mpich2/src/binding/fortran/use_mpi_f08/: mpi_f08_callbacks.f90
mpich2/src/include/: Makefile.mk  mpi.h.in  mpiimpl.h  mpir_collops.h  mpir_collops_dtypes.h  mpir_comm.h  mpir_compr.h  mpir_info.h  mpir_pmi.h
mpich2/src/mpi/: Makefile.mk
mpich2/src/mpi/coll/src/: coll_impl.c
mpich2/src/mpi/collops/: Makefile.mk  collops_util.c  register_collops_impl.c
mpich2/src/mpi/comm/: comm_impl.c  commutil.c
mpich2/src/mpi/compr/: Makefile.mk  compr_util.c  register_compr_impl.c
mpich2/src/mpi/errhan/: baseerrnames.txt  errnames.txt
mpich2/src/mpi/info/: info_impl.c  infoutil.c
mpich2/src/mpi/init/: mpir_init.c
mpich2/src/mpi/romio/adio/common/: ad_end.c  ad_init.c
mpich2/src/mpi/romio/adio/include/: adio_extern.h  adioi.h
mpich2/src/mpi/romio/include/: mpio.h.in
mpich2/src/mpi/romio/mpi-io/: mpioprof.h  register_compressor.c  register_datarep.c
mpich2/src/mpid/ch4/netmod/ucx/: ucx_init.c
mpich2/src/mpid/common/ucc/: mpid_ucc.c  mpid_ucc.h  mpid_ucc_allgather.c  mpid_ucc_allgatherv.c  mpid_ucc_allreduce.c  mpid_ucc_alltoall.c  mpid_ucc_alltoallv.c  mpid_ucc_barrier.c  mpid_ucc_bcast.c  mpid_ucc_collops.h  mpid_ucc_dtypes.h  mpid_ucc_gather.c  mpid_ucc_gatherv.c  mpid_ucc_pre.h  mpid_ucc_reduce.c  mpid_ucc_reduce_scatter.c  mpid_ucc_reduce_scatter_block.c  mpid_ucc_scatter.c  mpid_ucc_scatterv.c
mpich2/src/mpid/psp/include/: mpidimpl.h  mpidpre.h
mpich2/src/mpid/psp/src/: mpid_comm.c  mpid_init.c  mpid_irecv.c  mpid_part.c  mpid_pg.c  mpid_progress.c  mpid_psp_connect.c  mpid_psp_request.c  mpid_rma.c  mpid_vc.c
mpich2/src/pmi/: errnames.txt
mpich2/src/util/: mpir_pmi.c  mpir_pmi1.inc  mpir_pmi2.inc  mpir_pmix.inc
mpich2/test/mpi/: configure.ac  ps-test-ucc  ps-test-ucc.in
mpich2/test/mpi/coll/: ps-test-ucc
mpich2/test/mpi/parastation/: Makefile.am  ps-test-minimal.in  ps-test-ucc  testlist.in
mpich2/test/mpi/parastation/coll/: ps-test-ucc
mpich2/test/mpi/parastation/comm/: split_type_integrity.c
mpich2/test/mpi/parastation/compr/: Makefile.am  mpix_compressor_c2d2i.c  mpix_compressor_c2i.c  mpix_compressor_d2i.c  mpix_compressor_info.c  mpix_compressor_nop.c  mpix_compressor_plg.c  ps-test-minimal  testlist
mpich2/test/mpi/parastation/datatype/: Makefile.am  mixed_basic_to_derived.c  mixed_contig_to_derived.c  mixed_datatype_test.h  mixed_derived_to_basic.c  mixed_derived_to_contig.c  ps-test-ucc  testlist
mpich2/test/mpi/parastation/pscoll/: Makefile.am  gloo_wrapper.cc  gloo_wrapper.h  pscoll_binsum.c  pscoll_gloo.c  pscoll_mpi.c  pscoll_ucc.c  testlist
mpich2/test/mpi/parastation/testconf/: ucc.testconf
mpich2/test/mpi/parastation/testconf/psmgmt/: envall.testconf
mpich2/test/mpi/parastation/testconf/ucc/: pedantic.testconf  perceptive.testconf
mpich2/test/mpi/session/: Makefile.am  session.c  session_4x4.c  testlist
mpich2/test/mpi/threads/coll/: ps-test-ucc
scripts/: vcversion
